# bethehero

./: .env.example  .gitignore  .python-version  Makefile  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
src/application/repository/: ong_repository_interface.py
src/application/usercase/: create_ong.py  find_ong_by_email.py
src/domain/entity/: brazilian_document.py  email.py  ong.py  phone_number.py
src/domain/entity/validators/: brazilian_document.py  email.py  phone_number.py  validator_interface.py
src/infra/db/conn/: __init__.py  session.py
src/infra/db/models/: __init__.py  ong.py
src/infra/repository/: ong_repository_memory.py
src/infra/repository/ong/: ong_repository_orm.py
tests/application/usercases/: test_create_ong.py  test_find_ong_by_email.py
tests/domain/: test_brazilian_document.py  test_email.py  test_phone_number.py
